--- a/style.css
+++ b/style.css
@@ -907,7 +907,6 @@ body#error_page .error .section_title.nice_title > h3::after {
 -----------------------------------------------------------*/
 
 
-
 /* --------------------------------------------------------
 14. 					start about us page CSS
 -----------------------------------------------------------*/
@@ -1919,6 +1918,30 @@ body#single_blog_page .recent_post_details > p {
     }
 }
 
+
+/*----------------------------------------------------------
+				hostal campito page CSS
+-----------------------------------------------------------*/
+body#campito_page .breadcrumb_main_area, body#staff_page .breadcrumb_main_area{
+	background: url(img/rev-slider/slider-one.jpg) no-repeat center center / cover #000000;
+	position: relative;
+}
+
+/*----------------------------------------------------------
+				atlantico sur page CSS
+-----------------------------------------------------------*/
+body#atlantico_sur_page .breadcrumb_main_area, body#staff_page .breadcrumb_main_area{
+	background: url(img/rev-slider/slider-two.jpg) no-repeat center center / cover #000000;
+	position: relative;
+}
+
+/*----------------------------------------------------------
+				restaurante campito page CSS
+-----------------------------------------------------------*/
+body#restaurante_campito_page .breadcrumb_main_area, body#staff_page .breadcrumb_main_area{
+	background: url(img/restaurant_1.jpg) no-repeat center center / cover #000000;
+	position: relative;
+}
 
 /* --------------------------------------------------------
 					End Preloader CSS
